# claude-command-center

./: .gitignore  CLAUDE_CODE_TEMPLATES_ANALYSIS.md  PLATFORM_UPGRADE_RESEARCH.md  README.md  package-lock.json  setup.ps1  setup.sh  start.ps1  stop.ps1  test_session.py
.claude/: settings.local.json
.claude-template/: CLAUDE.md  protocols.ts  settings.json
.claude-template/agents/: consensus.md  implementer.md  memory-keeper.md  researcher.md  reviewer.md
.claude-template/commands/: decide.md  hacklearn.md  implement.md  memory.md  research.md  review.md  test.md
.claude-template/hooks/: post_tool_use.py  pre_tool_use.py  protocol_event.py  quality_gates.py  send_event.py
.claude-template/memory/: DECISIONS.md  MODULES_STATUS.md  PATTERNS.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  test_rust_server.py  vite.config.js  vitest.config.js
dashboard/src/: App.jsx  index.css
dashboard/src-tauri/: Cargo.toml  README.md  tauri.conf.json
dashboard/src-tauri/src/: http_server.rs  lib.rs  main.rs
dashboard/src/__tests__/: App.test.jsx  setup.js  sprint1.test.jsx
dashboard/src/constants/: design-system.js
dashboard/src/hooks/: useCollapsedState.js  useEvents.js  useRealTimeEvents.js  useSessionGroups.js  useTauriEvents.js
dashboard/src/utils/: formatters.js
server/: index.ts  jest.config.js  package-lock.json  package.json  server-node.ts
server/__tests__/: setup.ts
server/__tests__/fixtures/: sample-events.json
server/__tests__/integration/: events.test.ts  websocket.test.ts
(+10 files in other folders)
