[package]
name = "claude-command-center"
version = "2.0.0"
description = "Real-time observability dashboard for Claude Code sessions"
authors = ["Matt Willer"]
license = "MIT"
repository = "https://github.com/mbwiller/claude-code-command-center"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claude_command_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"

# HTTP server for receiving events from Python hooks
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Timestamps
chrono = "0.4"
